--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0668.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0668.html
@@ -204,9 +204,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1082 583 1360 641">
-        <span id="w_39" class="ocr_word" title="bbox 1082 585 1276 641">
+        <span id="w_39_0" class="ocr_word" title="bbox 1082 585 1276 641">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; Πρᾶξις β &amp;#x772; . &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
+          </span>
+        </span>
+        <span id="w_39_1" class="ocr_word" title="bbox 1082 585 1276 641">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">β&amp;#x772;.&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -336,9 +341,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_65" class="ocr_word" title="bbox 732 940 751 964" lang="grc">
+        <span id="w_65_0" class="ocr_word" title="bbox 732 940 751 964">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε &amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x772;ε</ins>
+          </span>
+        </span>
+        <span id="w_65_1" class="ocr_word" title="bbox 732 940 751 964">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 784 938 846 963" lang="grc">
@@ -369,11 +379,6 @@
         <span id="w_71" class="ocr_word" title="bbox 1796 917 1859 956" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_72" class="ocr_word" title="bbox 1891 929 2057 956" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δυσαντιβλεπτότατον.</ins>
           </span>
         </span>
       </span>
@@ -420,16 +425,11 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1968 999 2060 1024" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπο-</ins>
+            <ins title="nlp 2.00">ὑποκείμενον</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 391 1052 2059 1117">
-        <span id="w_83" class="ocr_word" title="bbox 391 1078 561 1104" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κείμενον</ins>
-          </span>
-        </span>
         <span id="w_84" class="ocr_word" title="bbox 585 1076 808 1117" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡρισμένον,</ins>
@@ -440,14 +440,9 @@
             <ins class="alt" title="nlp 1.00">οἷον</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 943 1056 950 1071" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾ </ins>
-          </span>
-        </span>
         <span id="w_87" class="ocr_word" title="bbox 964 1073 1005 1097" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins class="alt" title="nlp 2.00">῾ τὸ</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1029 1056 1175 1110" lang="grc">
@@ -541,7 +536,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 609 1197 714 1254">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; οὐκ &amp;#x003E;</ins>
+            <ins title="nlp 2.00">#x003E;</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 743 1195 889 1251" lang="grc">
@@ -673,9 +668,14 @@
             <ins class="alt" title="nlp 1.00">ὡρισμένον</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1246 1328 1451 1385" lang="grc">
+        <span id="w_132_0" class="ocr_word" title="bbox 1246 1328 1451 1385">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἐχούσης &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐχούσης&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 1246 1328 1451 1385">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1488 1346 1550 1370" lang="grc">
@@ -688,18 +688,8 @@
             <ins class="alt" title="nlp 1.00">ὑποκείμενον.</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 1920 1342 2063 1382" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σκοπή-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 397 1397 2064 1457">
-        <span id="w_136" class="ocr_word" title="bbox 397 1421 523 1448" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σωμεν</ins>
-          </span>
-        </span>
         <span id="w_137" class="ocr_word" title="bbox 555 1420 675 1447" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοίνυν</ins>
@@ -762,14 +752,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 395 1476 540 1529" lang="grc">
+        <span id="w_149_0" class="ocr_word" title="bbox 395 1476 540 1529">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγαθὸν</ins>
+            <ins class="alt" title="nlp 2.00">ἀγαθὸν</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 571 1473 675 1528">
+        <span id="w_149_1" class="ocr_word" title="bbox 395 1476 540 1529">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; οὐκ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐκ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 706 1472 851 1526" lang="grc">
@@ -990,16 +980,11 @@
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1979 1687 2068 1726" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρό-</ins>
+            <ins title="nlp 2.00">πρότασις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 398 1741 2069 1804">
-        <span id="w_194" class="ocr_word" title="bbox 398 1765 502 1796" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τασις</ins>
-          </span>
-        </span>
         <span id="w_195" class="ocr_word" title="bbox 532 1767 557 1804" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
@@ -1305,16 +1290,11 @@
         </span>
         <span id="w_255" class="ocr_word" title="bbox 1979 2016 2069 2056" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποφάσει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 404 2084 2071 2146">
-        <span id="w_256" class="ocr_word" title="bbox 404 2095 518 2135" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φάσει</ins>
-          </span>
-        </span>
         <span id="w_257" class="ocr_word" title="bbox 548 2097 596 2146" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῇ</ins>
@@ -1486,17 +1466,17 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1490 2237 1588 2264" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστιν</ins>
+            <ins class="alt" title="nlp 2.00">ἐστιν’</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1602 2222 1610 2237">
+        <span id="w_292_0" class="ocr_word" title="bbox 1648 2222 1758 2277">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐχ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1648 2222 1758 2277">
+        <span id="w_292_1" class="ocr_word" title="bbox 1648 2222 1758 2277">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; οὐκ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1789 2239 1813 2276" lang="grc">
@@ -1507,11 +1487,6 @@
         <span id="w_294" class="ocr_word" title="bbox 1836 2235 2019 2276" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρότασις</ins>
-          </span>
-        </span>
-        <span id="w_295" class="ocr_word" title="bbox 2048 2237 2072 2274" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
       </span>
@@ -1903,9 +1878,14 @@
             <ins class="alt" title="nlp 1.00">ἑπόμενον</ins>
           </span>
         </span>
-        <span id="w_371" class="ocr_word" title="bbox 977 2705 1224 2760" lang="grc">
+        <span id="w_371_0" class="ocr_word" title="bbox 977 2705 1224 2760">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ὡρισμένον &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡρισμένον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_371_1" class="ocr_word" title="bbox 977 2705 1224 2760">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1254 2705 1340 2750" lang="grc">
@@ -1938,18 +1918,8 @@
             <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
           </span>
         </span>
-        <span id="w_378" class="ocr_word" title="bbox 1992 2700 2078 2740" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀκο-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 412 2770 2078 2832">
-        <span id="w_379" class="ocr_word" title="bbox 412 2779 571 2821" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λουθίαν</ins>
-          </span>
-        </span>
         <span id="w_380" class="ocr_word" title="bbox 602 2776 706 2832" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχειν</ins>
@@ -1999,8 +1969,7 @@
       <span class="ocr_line" title="bbox 346 2941 1983 2992">
         <span id="w_389" class="ocr_word" title="bbox 346 2951 362 2983">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">1</ins>
           </span>
         </span>
         <span id="w_390" class="ocr_word" title="bbox 400 2949 598 2992" lang="grc">
@@ -2038,8 +2007,7 @@
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1249 2945 1356 2980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’j-o</ins>
-            <del title="nlp 0.90">’j-o</del>
+            <ins title="nlp 2.00">Τοῦτο</ins>
           </span>
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1383 2959 1419 2979" lang="grc">
@@ -2079,8 +2047,7 @@
       <span class="ocr_line" title="bbox 346 2998 2146 3051">
         <span id="w_403" class="ocr_word" title="bbox 346 3008 386 3041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 414 3019 475 3041" lang="grc">
@@ -2158,11 +2125,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">P</ins>
             <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_418" class="ocr_word" title="bbox 551 3085 557 3090">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_419" class="ocr_word" title="bbox 675 3066 720 3099">
