--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0618.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0618.html
@@ -900,14 +900,14 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 1316 1152 1394 1207">
+        <span id="w_173_0" class="ocr_word" title="bbox 1316 1152 1394 1207">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_174" class="ocr_word" title="bbox 1426 1155 1527 1193" lang="grc">
+        <span id="w_173_1" class="ocr_word" title="bbox 1316 1152 1394 1207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅλον.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -967,14 +967,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_186" class="ocr_word" title="bbox 1911 1239 1929 1263">
+        <span id="w_186_0" class="ocr_word" title="bbox 1911 1239 1929 1263">
           <span class="alternatives">
-            <ins title="nlp 2.00">ε&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ε&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_187" class="ocr_word" title="bbox 1961 1227 2076 1265" lang="grc">
+        <span id="w_186_1" class="ocr_word" title="bbox 1911 1239 1929 1263">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰδῶν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1656,9 +1656,14 @@
             <ins class="alt" title="nlp 1.00">δεύτερον.</ins>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 1358 2045 1447 2101">
+        <span id="w_324_0" class="ocr_word" title="bbox 1358 2045 1447 2101">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὧν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὧν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_324_1" class="ocr_word" title="bbox 1358 2045 1447 2101">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1477 2047 1539 2086" lang="grc">
@@ -1669,11 +1674,6 @@
         <span id="w_326" class="ocr_word" title="bbox 1571 2047 1802 2100" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δραξάμενος</ins>
-          </span>
-        </span>
-        <span id="w_327" class="ocr_word" title="bbox 1823 2044 2074 2101" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ἀλέξανδρος</ins>
           </span>
         </span>
       </span>
@@ -1986,7 +1986,7 @@
         </span>
         <span id="w_387" class="ocr_word" title="bbox 1190 2460 1328 2513" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 1348 2475 1418 2514" lang="grc">
@@ -2220,14 +2220,12 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 751 2852 910 2885">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lacimam</ins>
-            <del title="nlp 0.90">lacimam</del>
+            <ins title="nlp 2.00">lacunam</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 937 2850 1106 2883">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iudicavi:</ins>
-            <del title="nlp 0.90">iudicavi:</del>
+            <ins title="nlp 2.00">indicavi:</ins>
           </span>
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1134 2847 1341 2889">
@@ -2287,8 +2285,7 @@
         </span>
         <span id="w_444" class="ocr_word" title="bbox 827 2909 949 2943">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">itevavl</ins>
-            <del title="nlp 0.90">itevavl</del>
+            <ins title="nlp 2.00">iteravi</ins>
           </span>
         </span>
         <span id="w_445" class="ocr_word" title="bbox 1072 2907 1112 2941">
@@ -2303,8 +2300,7 @@
         </span>
         <span id="w_447" class="ocr_word" title="bbox 1201 2906 1318 2940">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">addidi</ins>
-            <del title="nlp 0.90">addidi</del>
+            <ins title="nlp 2.00">addidi</ins>
           </span>
         </span>
         <span id="w_448" class="ocr_word" title="bbox 1438 2905 1480 2937">
@@ -2327,21 +2323,20 @@
             <ins class="alt" title="nlp 1.00">τινες</ins>
           </span>
         </span>
-        <span id="w_452" class="ocr_word" title="bbox 1794 2902 1883 2947" lang="grc">
+        <span id="w_452_0" class="ocr_word" title="bbox 1794 2902 1883 2947">
           <span class="alternatives">
-            <ins title="nlp 2.00">καἰ]</ins>
+            <ins class="alt" title="nlp 2.00">κτλ.]</ins>
+          </span>
+        </span>
+        <span id="w_452_1" class="ocr_word" title="bbox 1794 2902 1883 2947">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_453" class="ocr_word" title="bbox 1911 2902 1953 2936">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">cf.</ins>
             <del title="nlp 0.90">cf.</del>
-          </span>
-        </span>
-        <span id="w_454" class="ocr_word" title="bbox 1977 2904 2137 2936">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammon.</ins>
-            <del title="nlp 0.90">Ammon.</del>
           </span>
         </span>
       </span>
@@ -2444,9 +2439,14 @@
             <del title="nlp 0.90">quaedam</del>
           </span>
         </span>
-        <span id="w_472" class="ocr_word" title="bbox 525 3028 685 3061">
+        <span id="w_472_0" class="ocr_word" title="bbox 525 3028 685 3061">
           <span class="alternatives">
-            <ins title="nlp 2.00">videnture</ins>
+            <ins class="alt" title="nlp 2.00">videntur</ins>
+          </span>
+        </span>
+        <span id="w_472_1" class="ocr_word" title="bbox 525 3028 685 3061">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_473" class="ocr_word" title="bbox 711 3027 880 3060">
@@ -2462,13 +2462,7 @@
         </span>
         <span id="w_475" class="ocr_word" title="bbox 1131 3037 1174 3068" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑφ’</ins>
-          </span>
-        </span>
-        <span id="w_476" class="ocr_word" title="bbox 1183 3022 1188 3033">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">ὑφ᾿ </ins>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1218 3035 1322 3067" lang="grc">
@@ -2496,11 +2490,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">P</ins>
             <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_482" class="ocr_word" title="bbox 1952 3019 2137 3063" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀντίφασιν]</ins>
           </span>
         </span>
       </span>
@@ -2573,8 +2562,7 @@
         </span>
         <span id="w_495" class="ocr_word" title="bbox 1978 3078 2137 3110">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Amnion,</ins>
-            <del title="nlp 0.90">Amnion,</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
       </span>
@@ -2587,13 +2575,7 @@
         </span>
         <span id="w_497" class="ocr_word" title="bbox 409 3145 454 3179">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">54</ins>
-          </span>
-        </span>
-        <span id="w_498" class="ocr_word" title="bbox 461 3155 477 3171">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">54v</ins>
           </span>
         </span>
         <span id="w_499" class="ocr_word" title="bbox 620 3143 663 3177">
