--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0669.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0669.html
@@ -34,14 +34,8 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 804 143 1056 177">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTERPRET</ins>
+            <ins class="alt" title="nlp 2.00">INTERPRETATIONE</ins>
             <del title="nlp 0.90">INTERPRET</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 1064 144 1230 178">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ATIONE</ins>
-            <del title="nlp 0.90">ATIONE</del>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1259 144 1379 189">
@@ -174,9 +168,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1668 342 1758 366" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 1668 342 1758 366">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπο–</ins>
+            <ins class="alt" title="nlp 2.00">ἀποφατικόν,</ins>
+          </span>
+        </span>
+        <span id="w_31_1" class="ocr_word" title="bbox 1668 342 1758 366">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1779 339 1796 363">
@@ -184,18 +183,8 @@
             <ins title="nlp 2.00">f.</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1809 336 1862 363">
-          <span class="alternatives">
-            <ins title="nlp 2.00">80v</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 140 392 1790 449">
-        <span id="w_34" class="ocr_word" title="bbox 140 406 312 445" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">φατικόν,</ins>
-          </span>
-        </span>
         <span id="w_35" class="ocr_word" title="bbox 345 393 442 431" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -491,16 +480,11 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1622 680 1792 720" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσδιο-</ins>
+            <ins title="nlp 2.00">προσδιορισμὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 139 734 1791 788">
-        <span id="w_94" class="ocr_word" title="bbox 139 745 270 784" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρισμὸν</ins>
-          </span>
-        </span>
         <span id="w_95" class="ocr_word" title="bbox 302 744 533 784" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰσάγουσιν.</ins>
@@ -895,9 +879,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_170" class="ocr_word" title="bbox 141 1207 254 1262">
+        <span id="w_170_0" class="ocr_word" title="bbox 141 1207 254 1262">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; τοῖς &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τοῖς&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_170_1" class="ocr_word" title="bbox 141 1207 254 1262">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_171" class="ocr_word" title="bbox 284 1209 390 1248" lang="grc">
@@ -960,18 +949,8 @@
             <ins class="alt" title="nlp 1.00">ἄρθρῳ</ins>
           </span>
         </span>
-        <span id="w_183" class="ocr_word" title="bbox 1703 1224 1794 1263" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρη-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 138 1276 1794 1332">
-        <span id="w_184" class="ocr_word" title="bbox 138 1277 314 1331" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σάμενος,</ins>
-          </span>
-        </span>
         <span id="w_185" class="ocr_word" title="bbox 347 1276 416 1317" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
@@ -1153,19 +1132,19 @@
             <ins class="alt" title="nlp 1.00">παρ’</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 260 1480 420 1535" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 260 1480 420 1535">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘0μήρῳ</ins>
+            <ins class="alt" title="nlp 2.00">Ὁμήρῳ</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 260 1480 420 1535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 452 1483 626 1534" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγοντος</ins>
-          </span>
-        </span>
-        <span id="w_222" class="ocr_word" title="bbox 656 1495 803 1535" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνείρου</ins>
           </span>
         </span>
       </span>
@@ -1175,9 +1154,14 @@
             <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 454 1548 461 1562" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 454 1548 461 1562">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾Ομήρῳ</ins>
+            <ins class="alt" title="nlp 2.00">῾θωρῆξαί</ins>
+          </span>
+        </span>
+        <span id="w_224_1" class="ocr_word" title="bbox 454 1548 461 1562">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 679 1562 722 1588" lang="grc">
@@ -1193,11 +1177,6 @@
         <span id="w_227" class="ocr_word" title="bbox 914 1548 1237 1603" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καρηκομόωντας</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 1263 1549 1488 1604" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ἀχαιούς ’ ,</ins>
           </span>
         </span>
       </span>
@@ -1247,29 +1226,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 1325 1617 1333 1631" lang="grc">
+        <span id="w_238_0" class="ocr_word" title="bbox 1325 1617 1333 1631">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">‘πανσυδίῃ</ins>
+            <ins class="alt" title="nlp 2.00">῾πανδυδίῃ᾿.</ins>
           </span>
         </span>
-        <span id="w_239" class="ocr_word" title="bbox 1547 1615 1555 1630">
+        <span id="w_238_1" class="ocr_word" title="bbox 1325 1617 1333 1631">
           <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
-          </span>
-        </span>
-        <span id="w_240" class="ocr_word" title="bbox 1567 1633 1576 1642">
-          <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 1609 1618 1697 1657" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅθεν</ins>
-          </span>
-        </span>
-        <span id="w_242" class="ocr_word" title="bbox 1729 1616 1792 1656" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1373,12 +1342,7 @@
         </span>
         <span id="w_262" class="ocr_word" title="bbox 1127 1751 1134 1766" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾πανσυδίῃ </ins>
-          </span>
-        </span>
-        <span id="w_263" class="ocr_word" title="bbox 1351 1753 1358 1768">
-          <span class="alternatives">
-            <ins title="nlp 2.00">’</ins>
+            <ins title="nlp 2.00">῾πανσυδίῃ ’</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1397 1770 1481 1808" lang="grc">
@@ -1502,16 +1466,11 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1730 1903 1791 1927" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κα-</ins>
+            <ins title="nlp 2.00">καθόλου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 138 1957 1795 2015">
-        <span id="w_288" class="ocr_word" title="bbox 138 1962 257 2002" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θόλου</ins>
-          </span>
-        </span>
         <span id="w_289" class="ocr_word" title="bbox 288 1974 581 2015" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσδιορισμὸν</ins>
@@ -1564,17 +1523,11 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1704 1957 1795 1995" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λαμ-</ins>
+            <ins title="nlp 2.00">λαμβάνεται.</ins>
           </span>
         </span>
       </span>
-      <span class="ocr_line" title="bbox 139 2031 303 2085">
-        <span id="w_300" class="ocr_word" title="bbox 139 2031 303 2085" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βάνεται.</ins>
-          </span>
-        </span>
-      </span>
+      <span class="ocr_line" title="bbox 139 2031 303 2085"/>
       <span class="ocr_line" title="bbox 251 2089 1867 2148">
         <span id="w_301" class="ocr_word" title="bbox 251 2097 384 2139" lang="grc">
           <span class="alternatives">
@@ -1944,8 +1897,7 @@
         </span>
         <span id="w_373" class="ocr_word" title="bbox 1336 2434 1397 2473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’to</ins>
-            <del title="nlp 0.90">’to</del>
+            <ins title="nlp 2.00">῾τὸ</ins>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1431 2450 1483 2487" lang="grc">
@@ -2084,16 +2036,11 @@
         </span>
         <span id="w_400" class="ocr_word" title="bbox 1702 2567 1796 2607" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντι-</ins>
+            <ins title="nlp 2.00">ἀντικείμενα,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 138 2635 1795 2698">
-        <span id="w_401" class="ocr_word" title="bbox 138 2645 311 2698" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κείμενα,</ins>
-          </span>
-        </span>
         <span id="w_402" class="ocr_word" title="bbox 348 2659 395 2683" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
@@ -2231,12 +2178,7 @@
         </span>
         <span id="w_428" class="ocr_word" title="bbox 498 2882 622 2926">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_429" class="ocr_word" title="bbox 631 2895 638 2914">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_430" class="ocr_word" title="bbox 665 2885 731 2914" lang="grc">
@@ -2262,13 +2204,8 @@
         </span>
         <span id="w_434" class="ocr_word" title="bbox 1114 2877 1235 2920">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripsi</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
             <del title="nlp 0.90">scripsi</del>
-          </span>
-        </span>
-        <span id="w_435" class="ocr_word" title="bbox 1249 2887 1256 2908">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_436" class="ocr_word" title="bbox 1281 2878 1385 2908" lang="grc">
@@ -2386,8 +2323,7 @@
         </span>
         <span id="w_457" class="ocr_word" title="bbox 481 2999 521 3031">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">Ρ1</ins>
           </span>
         </span>
         <span id="w_458" class="ocr_word" title="bbox 693 2997 732 3029">
@@ -2452,12 +2388,6 @@
             <del title="nlp 0.90">addidi</del>
           </span>
         </span>
-        <span id="w_469" class="ocr_word" title="bbox 298 3034 301 3044">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_470" class="ocr_word" title="bbox 346 3057 384 3089">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">17</ins>
@@ -2489,9 +2419,14 @@
             <ins class="alt" title="nlp 1.00">παρ’</ins>
           </span>
         </span>
-        <span id="w_476" class="ocr_word" title="bbox 1163 3047 1314 3092" lang="grc">
+        <span id="w_476_0" class="ocr_word" title="bbox 1163 3047 1314 3092">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘0μήρῳ]</ins>
+            <ins class="alt" title="nlp 2.00">Ὁμήρῳ]</ins>
+          </span>
+        </span>
+        <span id="w_476_1" class="ocr_word" title="bbox 1163 3047 1314 3092">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_477" class="ocr_word" title="bbox 1342 3048 1379 3081">
@@ -2513,11 +2448,6 @@
         <span id="w_480" class="ocr_word" title="bbox 1649 3046 1691 3078">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">22</ins>
-          </span>
-        </span>
-        <span id="w_481" class="ocr_word" title="bbox 1729 3044 1866 3079" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτόθεν</ins>
           </span>
         </span>
       </span>
@@ -2551,8 +2481,7 @@
         </span>
         <span id="w_487" class="ocr_word" title="bbox 760 3111 898 3154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scnpsi:</ins>
-            <del title="nlp 0.90">scnpsi:</del>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_488" class="ocr_word" title="bbox 926 3108 1071 3142" lang="grc">
@@ -2595,8 +2524,7 @@
         </span>
         <span id="w_495" class="ocr_word" title="bbox 1825 3103 1866 3136">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
       </span>
@@ -2624,24 +2552,17 @@
         </span>
         <span id="w_500" class="ocr_word" title="bbox 416 3173 574 3205">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammou.</ins>
-            <del title="nlp 0.90">Ammou.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_501" class="ocr_word" title="bbox 600 3171 658 3205">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’ol.</ins>
-            <del title="nlp 0.90">’ol.</del>
+            <ins title="nlp 2.00">fol.</ins>
           </span>
         </span>
         <span id="w_502" class="ocr_word" title="bbox 678 3170 743 3202">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">216</ins>
-          </span>
-        </span>
-        <span id="w_503" class="ocr_word" title="bbox 753 3177 766 3193">
-          <span class="alternatives">
-            <ins title="nlp 2.00">r</ins>
+            <ins class="alt" title="nlp 2.00">216r</ins>
           </span>
         </span>
         <span id="w_504" class="ocr_word" title="bbox 917 3167 961 3200">
